# haskell-yaml

./: .gitignore  README.md  flake.nix  haskell-yaml.cabal  package.yaml
examples/: bool.yaml  float.yaml  int.yaml
lib/: HaskellYaml.hs
src/: Main.hs
test/: Spec.hs
