cabal-version: 2.4

name:           haskell-yaml
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/fersilva16/haskell-yaml#readme>
homepage:       https://github.com/fersilva16/haskell-yaml#readme
bug-reports:    https://github.com/fersilva16/haskell-yaml/issues
author:         Fernando Silva
maintainer:     fernandonsilva16@gmail.com
copyright:      2024 Fernando Silva
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/fersilva16/haskell-yaml

executable haskell-yaml
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5,
      containers

test-suite haskell-yaml-test
  main-is:          Spec.hs
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
